# reachability_tests

./: .gitignore  README.md  main.py  pyproject.toml  rotarylinkenv_test.ipynb  rotarynlink_env.ipynb  test.ipynb
configs/: rotarylink_cdiffusion.yaml  rotarylink_cinn.yaml  rotarylink_cinn_v2.yaml  rotarylink_cvae.yaml  rotarylink_knn.yaml  rotarynlink_cdiffusion.yaml  rotarynlink_cinn.yaml  rotarynlink_cvae.yaml  simple_cinn.yaml  simple_cvae.yaml  simple_knn.yaml
configs/archived/: rotarylink_cinn.yaml  simple_cinn.yaml  simple_cvae.yaml  simple_knn.yaml
configs/sweeps/: cinn_sweep.yaml
notes/: Robot setups to build.md  VAE notes.md  notes.aux  notes.bbl  notes.blg  notes.fdb_latexmk  notes.fls  notes.out  notes.tex  notes.toc  reachability_references.bib
notes/.obsidian/: workspace.json
notes/compare_models/: compare_models.aux  compare_models.fdb_latexmk  compare_models.fls  compare_models.out  compare_models.tex  compare_models.toc
outputs/model_ckpts/cdiffusion/: cdiffusion_rotary_1232026.yaml  cdiffusion_rotary_1242026.yaml  cdiffusion_rotary_1262026_controlledparams.yaml
reachability/: __init__.py  types.py
reachability/data/: datasets.py  loaders.py
reachability/envs/: rotary_link.py  rotary_nlink.py  simple.py  workspace.py
reachability/eval/: eval_model.py  metrics.py
reachability/models/: base.py  cdiffusion.py  cinn.py  cvae.py  cvae_helpers.py  features.py  knn.py  loss.py  submodels.py
reachability/utils/: plotting.py  utils.py
scripts/: sweep.py  train_cdiffusion.py  train_cinn.py  train_cvae.py  train_knn.py
(+20 files in other folders)
